Tela de detalhes de encomenda pronta
crud

--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Detalhes_Encomenda.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Detalhes_Encomenda.form
@@ -23,14 +23,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="JPNfundo11" min="-2" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Component id="JPNfundo11" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="JPNfundo11" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Component id="JPNfundo11" pref="586" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -243,7 +246,7 @@
                       <Component id="JTFcarga11" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="JLBcarga11" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="20" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="JBTvoltar11" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="JBTmenu11" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -678,7 +681,6 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Rua tabajara, S&#xe3;o Torquarto, Vila Velha, ES"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JTFenderecodestinatario11ActionPerformed"/>
@@ -747,7 +749,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="CPF:"/>
+            <Property name="text" type="java.lang.String" value="Numero pedido:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="JLBcidadedestino11">
